@@ -8,10 +8,11 @@ import java.net.InetAddress;
 import java.net.ServerSocket;
 import java.net.URLDecoder;
 import java.net.UnknownHostException;
+import java.nio.charset.StandardCharsets;
 
 class Start {
 
-    public static void main(String[] args) throws UnsupportedEncodingException {
+    public static void main(String[] args) {
         try {
             ServerSocket s = new ServerSocket(65000, 10, InetAddress.getLocalHost());
         } catch (UnknownHostException e) {
@@ -25,7 +26,7 @@ class Start {
         Console console = System.console();
         boolean logTerminalError = false;
         if (console == null && !GraphicsEnvironment.isHeadless()) {
-            String filename = URLDecoder.decode(Start.class.getProtectionDomain().getCodeSource().getLocation().toString().substring(6), "UTF-8");
+            String filename = URLDecoder.decode(Start.class.getProtectionDomain().getCodeSource().getLocation().toString().substring(6), StandardCharsets.UTF_8);
             if (filename.endsWith(".jar")) {
                 try {
                     Runtime.getRuntime().exec(new String[]{"cmd", "/c", "start", "cmd", "/k", "java -jar \"" + filename + "\""});
